Commit#21 Traducción, Arreglo de CSS

--- a/app/scripts/templates/collections.html
+++ b/app/scripts/templates/collections.html
@@ -16,17 +16,7 @@
         <div class="col-lg-6">
           <img src="assets/img/insulationlogo.png">
           <br>
-          <p>La colección se encuentra inspirada en el trabajo
-            del artista Michael Kukla. Su obra se resalta por el
-            uso de espacios negativos, limpieza orgánica y utiliza
-            como elemento esencial el hexágono. Observa la
-            degradación de los objetos a causa del agua y el
-            aire. La colección acoge la limpieza y la nitidez del
-            artista con líneas simples jugando con estructura y
-            fluidez. Además todas las prendas son tratadas con
-            químicos naturales que las hacen hidrofóbicas .
-            Esto repele el agua evitando manchas, derrames y
-            manteniendo la prenda limpia por más tiempo.</p>
+          <p><%= polyglot.t('insulationText') %></p>
             <br>
             <button class="btn btn-success" id="insulation"><%= polyglot.t('buttonMore') %></button>
         </div>
