--- a/app/scripts/templates/insulation.html
+++ b/app/scripts/templates/insulation.html
@@ -13,17 +13,7 @@
       <h1><%= polyglot.t('collectionsSubtitle') %></h1>
       <img src="assets/img/title_line.png">
       <br>
-      <p>La colección se encuentra inspirada en el trabajo
-        del artista Michael Kukla. Su obra se resalta por el
-        uso de espacios negativos, limpieza orgánica y utiliza
-        como elemento esencial el hexágono. Observa la
-        degradación de los objetos a causa del agua y el
-        aire. La colección acoge la limpieza y la nitidez del
-        artista con líneas simples jugando con estructura y
-        fluidez. Además todas las prendas son tratadas con
-        químicos naturales que las hacen hidrofóbicas .
-        Esto repele el agua evitando manchas, derrames y
-        manteniendo la prenda limpia por más tiempo.</p>
+      <p><%= polyglot.t('insulationText') %></p>
       <br>
       <div class="imagePreview">
         <img src="assets/img/col1b.jpg" class="col1a">
