--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -47,6 +47,7 @@ body {
     font-size: 1em;
     line-height: 1.4;
     background-color: black;
+    margin-top: 56px;
 }
 
 /*
@@ -1020,10 +1021,11 @@ box-shadow:         0px 0px 30px 0px rgba(232, 0, 0, 0.67);
 }
 
 .aboutLogo{
-  position: absolute;
+  position: relative;
   text-align: center;
-  left: 20%;
-  top: 5%;
+  /* left: 20%; */
+  /* top: 15%; */
+  margin-right: 30%;
 }
 .aboutLogo img{
     background: none;
@@ -1034,17 +1036,12 @@ box-shadow:         0px 0px 30px 0px rgba(232, 0, 0, 0.67);
     color: white;
     margin-top: 1px;
 }
-.aboutLogo span{
-    color: white;
-    position: absolute;
-    font-size: 10px;
-    font-family: monospace;
-}
 .aboutText {
-    position: absolute;
-    top: 30%;
+    position: relative;
     left: 20%;
     color: white;
+    margin-right: 20%;
+    margin-left: 5%;
 }
 .flex {
     display: flex;
@@ -1058,10 +1055,11 @@ box-shadow:         0px 0px 30px 0px rgba(232, 0, 0, 0.67);
 }
 .aboutText span {
     font-family: bodoniItalic_font;
-    position: absolute;
-    top: 30px;
+    position: relative;
+    top: -100px;
     left: -200px;
     font-size: 300px;
+    margin-bottom: -150px;
 }
 .aboutText p {
     font-family: bodoniRegular_font;
@@ -1070,11 +1068,11 @@ box-shadow:         0px 0px 30px 0px rgba(232, 0, 0, 0.67);
 }
 
 .designerText {
-    position: absolute;
-    top: 30%;
+    position: relative;
+    /* top: 30%; */
     color: white;
-    margin-right: 10%;
-    left: 10%;
+    margin-left: 10%;
+    /* left: 10%; */
     text-align: left;
 }
 .designerText h1 {
@@ -1105,13 +1103,12 @@ box-shadow:         0px 0px 30px 0px rgba(232, 0, 0, 0.67);
     margin-top: 5px;
 }
 
-.collectionsText {
-    position: absolute;
-    top: 30%;
-    color: white;
-    margin-right: 10%;
-    left: 10%;
-    text-align: center;
+.collectionsText {  position: relative;
+  /* top: 30%; */
+  color: white;
+  margin-left: 10%;
+  /* left: 10%; */
+  text-align: center;
 }
 .collectionsText h1 {
     font-family: bodoniCondensedItalic_font;
@@ -1136,10 +1133,10 @@ box-shadow:         0px 0px 30px 0px rgba(232, 0, 0, 0.67);
     background-color: darkgray;
 }
 .insulationText{
-    position: absolute;
+    position: relative;
     color: white;
-    margin-right: 10%;
-    left: 10%;
+    margin: 5%;
+    /* left: 10%; */
     text-align: center;
 }
 .insulationText h1 {
@@ -1196,17 +1193,5 @@ box-shadow:         0px 0px 30px 0px rgba(232, 0, 0, 0.67);
     }
     .navbar{
         display: block ! important;
-    }
-}
-
-@media (max-width: 500px) {
-    body{
-        padding-top: 250px;
-    }
-}
-
-@media (max-device-width: 500px){
-    body{
-        padding-top: 250px;
     }
 }
